translatr/public/stylesheets/main.css
/* ... */
/* Pagination */
.pagination {
	text-align: center;
}

/* Templates */
.template {
	display: none !important;
}

/* Vertical Alignment */
.valign-wrapper {
	height: 100%;
}

/* Tabs */
.tabs-container {
	margin-bottom: 8px;
	background: transparent;
}
.tabs {
	background-color: transparent;
}
.tabs .tab a {
	color: #757575;
}
.tabs .indicator {
    background-color: #4CAF50;
}
.tabs .tab a.active,
.tabs .tab a:hover,
.tabs .tab a:focus {
    color: #4CAF50;
}

/* Charts */
.ct-chart.ct-double-octave:before {
    padding-bottom: 33.3%;
}
.ct-series-a .ct-bar,
.ct-series-b .ct-bar,
.ct-series-c .ct-bar,
.ct-series-d .ct-bar {
	stroke-width: 5px;
}
.ct-chart .ct-series-a .ct-bar {
	stroke: #ff9800;
}
.ct-chart .ct-series-b .ct-bar {
	stroke: #2196F3;
}
.ct-chart .ct-series-c .ct-bar {
	stroke: #8bc34a;
}
.ct-chart .ct-series-d .ct-bar {
	stroke: #F44336;
}
.ct-chart .ct-grid {
    stroke: rgba(0,0,0,.1);
	stroke-dasharray: 0;
}
.ct-area {
    fill-opacity: .6;
}

/* Authentication */
.template-login .login {
	display: none;
}
.collection.auth-provider {
	padding-bottom: 1rem;
}
.collection.auth-provider .collection-item.avatar {
	padding: 0.5rem 1rem;
}
.collection.auth-provider .collection-item:not(.active):hover {
	background-color: transparent;
}
.collection.linked-accounts .collection-item {
	min-height: 56px;
}
.collection-item a.provider {
	display: block;
	min-height: auto;
}
.auth-provider .provider {
	padding: 0;
	height: auto;
	height: 38px;
	min-height: auto;
	border-radius: 2px;
}

.provider .icon-container {
    border-right: 1px solid rgba(0,0,0,0.2);
    box-sizing: border-box;
    width: 38px;
    height: 100%;
    line-height: 1;
    padding: 11px;
    float: left;
}
.provider .title {
    line-height: 38px;
    height: 100%;
    display: block;
    text-align: center;
}
/* Get the colours from: https://lipis.github.io/bootstrap-social/ */
.provider.provider-facebook {
    color: #fff;
    background-color: #3b5998 !important;
}
.provider.provider-google {
    color: #fff;
    background-color: #dd4b39 !important;
}
.provider.provider-github {
	color: #fff;
    background-color: #444 !important;
}
.provider.provider-twitter {
	color: #fff;
    background-color: #55acee !important;
}
.provider.provider-keycloak {
	color: #fff;
    background-color: #393F44 !important;
}
.fa-keycloak:before {
    content: "\f19b";
}

.empty {
    padding: 2rem;
}

i.xlarge {
	font-size: 9em;
}

